--- a/locales/lt-LT.json
+++ b/locales/lt-LT.json
@@ -424,5 +424,16 @@
       "add_to_apple_wallet": "Pridėti prie „Apple Wallet“",
       "qr_image_alt": "QR kodas — nuskaitykite ir panaudokite dovanų kortelę"
     }
+  },
+  "store_availability": {
+    "general": {
+      "view_store_info": "Žiūrėti parduotuvės informaciją",
+      "check_other_stores": "Pažiūrėti ar yra kitose parduotuvėse",
+      "pick_up_available": "Galimas paėmimas",
+      "pick_up_currently_unavailable": "Paėmimas šiuo metu negalimas",
+      "pick_up_available_at_html": "Paėmimas galimas <strong>{{ location_name }}<\/strong>",
+      "pick_up_unavailable_at_html": "Paėmimas <strong>{{ location_name }}<\/strong> šiuo metu negalimas",
+      "confirm_address": "Susisiekite su parduotuve, kad patvirtinti adresą"
+    }
   }
 }
