--- a/locales/sk-SK.json
+++ b/locales/sk-SK.json
@@ -424,5 +424,16 @@
       "add_to_apple_wallet": "Pridať do aplikácie Apple Wallet",
       "qr_image_alt": "QR kód – naskenujte ho a uplatnite si darčekový poukaz"
     }
+  },
+  "store_availability": {
+    "general": {
+      "view_store_info": "Zobraziť informácie o obchode",
+      "check_other_stores": "Skontrolovať dostupnosť v iných obchodoch",
+      "pick_up_available": "K dispozícii na vyzdvihnutie",
+      "pick_up_currently_unavailable": "Aktuálne dostupné na vyzdvihnutie",
+      "pick_up_available_at_html": "K dispozícii na vyzdvihnutie na adrese <strong>{{ location_name }}<\/strong>",
+      "pick_up_unavailable_at_html": "Aktuálne dostupné na vyzdvihnutie na adrese <strong>{{ location_name }}<\/strong>",
+      "confirm_address": "Kontaktujte obchod a potvrďte adresu"
+    }
   }
 }
