--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -395,6 +395,17 @@
       "view_in_space_label": "View in your space, loads item in augmented reality window"
     }
   },
+  "store_availability": {
+    "general": {
+      "view_store_info": "View store information",
+      "check_other_stores": "Check availability at other stores",
+      "pick_up_available": "Pickup available",
+      "pick_up_currently_unavailable": "Pickup currently unavailable",
+      "pick_up_available_at_html": "Pickup available at <strong>{{ location_name }}<\/strong>",
+      "pick_up_unavailable_at_html": "Pickup currently unavailable at <strong>{{ location_name }}<\/strong>",
+      "confirm_address": "Contact store to confirm address"
+    }
+  },
   "gift_cards": {
     "issued": {
       "title_html": "Here's your {{ value }} gift card for {{ shop }}!",
