--- a/locales/fi.json
+++ b/locales/fi.json
@@ -410,5 +410,16 @@
       "add_to_apple_wallet": "Lisää Apple Walletiin",
       "qr_image_alt": "QR-koodi – lunasta lahjakortti skannaamalla"
     }
+  },
+  "store_availability": {
+    "general": {
+      "view_store_info": "Näytä kaupan tiedot",
+      "check_other_stores": "Tarkista saatavuus muista kaupoista",
+      "pick_up_available": "Nouto saatavilla",
+      "pick_up_currently_unavailable": "Nouto ei ole tällä hetkellä saatavilla",
+      "pick_up_available_at_html": "Nouto saatavilla paikassa <strong>{{ location_name }}<\/strong>",
+      "pick_up_unavailable_at_html": "Nouto ei ole tällä hekellä saatavilla paikassa <strong>{{ location_name }}<\/strong>",
+      "confirm_address": "Ota yhteyttä kauppaan vahvistaaksesi osoitteen"
+    }
   }
 }
