--- a/locales/ko.json
+++ b/locales/ko.json
@@ -410,5 +410,16 @@
       "add_to_apple_wallet": "Apple Wallet에 추가",
       "qr_image_alt": "QR 코드 — 스캔하여 기프트 카드 현금화"
     }
+  },
+  "store_availability": {
+    "general": {
+      "view_store_info": "스토어 정보 보기",
+      "check_other_stores": "다른 스토어 사용 가능 여부 확인",
+      "pick_up_available": "픽업을 사용할 수 있습니다.",
+      "pick_up_currently_unavailable": "현재 픽업을 사용할 수 없습니다.",
+      "pick_up_available_at_html": "<strong>{{ location_name }}<\/strong>에서 픽업을 사용할 수 있습니다.",
+      "pick_up_unavailable_at_html": "<strong>{{ location_name }}<\/strong>에서는 현재 픽업을 사용할 수 없습니다.",
+      "confirm_address": "스토어에 연락하여 주소 확인하기"
+    }
   }
 }
