--- a/locales/ms.json
+++ b/locales/ms.json
@@ -410,5 +410,16 @@
       "add_to_apple_wallet": "Tambah ke Apple Wallet",
       "qr_image_alt": "Kod QR — imbas untuk menebus kad hadiah"
     }
+  },
+  "store_availability": {
+    "general": {
+      "view_store_info": "Lihat maklumat kedai",
+      "check_other_stores": "Periksa ketersediaan di kedai lain",
+      "pick_up_available": "Kutipan tersedia",
+      "pick_up_currently_unavailable": "Kutipan tidak tersedia pada masa ini",
+      "pick_up_available_at_html": "Kutipan tersedia di <strong>{{ location_name }}<\/strong>",
+      "pick_up_unavailable_at_html": "Kutipan tidak tersedia pada masa ini di <strong>{{ location_name }}<\/strong>",
+      "confirm_address": "Hubungi kedai untuk mengesahkan alamat"
+    }
   }
 }
