--- a/locales/pt-PT.json
+++ b/locales/pt-PT.json
@@ -410,5 +410,16 @@
       "add_to_apple_wallet": "Adicionar ao Apple Wallet",
       "qr_image_alt": "QR code - digitalizar para resgatar cartão de oferta"
     }
+  },
+  "store_availability": {
+    "general": {
+      "view_store_info": "Ver informações da loja",
+      "check_other_stores": "Verificar a disponibilidade noutras lojas",
+      "pick_up_available": "Recolha disponível",
+      "pick_up_currently_unavailable": "Recolha atualmente indisponível",
+      "pick_up_available_at_html": "Recolha disponível em <strong>{{ location_name }}<\/strong>",
+      "pick_up_unavailable_at_html": "Recolha atualmente indisponível em <strong>{{ location_name }}<\/strong>",
+      "confirm_address": "Contacte a loja para confirmar o endereço"
+    }
   }
 }
