--- a/locales/sv.json
+++ b/locales/sv.json
@@ -410,5 +410,16 @@
       "add_to_apple_wallet": "Lägg till i Apple Wallet",
       "qr_image_alt": "QR-kod – skanna för att lösa in presentkort"
     }
+  },
+  "store_availability": {
+    "general": {
+      "view_store_info": "Visa butiksinformation",
+      "check_other_stores": "Kontrollerar tillgänglighet i andra butiker",
+      "pick_up_available": "Hämtning tillgänglig",
+      "pick_up_currently_unavailable": "Hämtning är för närvarande inte tillgängligt",
+      "pick_up_available_at_html": "Hämtning tillgänglig på <strong>{{ location_name }}<\/strong>",
+      "pick_up_unavailable_at_html": "Hämtning är för närvarande inte tillgängligt på <strong>{{ location_name }}<\/strong>",
+      "confirm_address": "Kontakta butik för att bekräfta adress"
+    }
   }
 }
