--- a/locales/th.json
+++ b/locales/th.json
@@ -410,5 +410,16 @@
       "add_to_apple_wallet": "เพิ่มลงใน Apple Wallet",
       "qr_image_alt": "คิวอาร์โค้ด — สแกนเพื่อแลกใช้บัตรของขวัญ"
     }
+  },
+  "store_availability": {
+    "general": {
+      "view_store_info": "ดูข้อมูลร้านค้า",
+      "check_other_stores": "ตรวจสอบความพร้อมที่ร้านค้าอื่นๆ",
+      "pick_up_available": "การรับสินค้าด้วยตนเองพร้อมให้บริการ",
+      "pick_up_currently_unavailable": "การรับสินค้าด้วยตนเองไม่พร้อมให้บริการในขณะนี้",
+      "pick_up_available_at_html": "การรับสินค้าด้วยตนเองพร้อมให้บริการที่ <strong>{{ location_name }}<\/strong>",
+      "pick_up_unavailable_at_html": "การรับสินค้าด้วยตนเองไม่พร้อมให้บริการที่ <strong>{{ location_name }}<\/strong> ในขณะนี้",
+      "confirm_address": "ติดต่อร้านค้าเพื่อยืนยันที่อยู่"
+    }
   }
 }
